--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         <section class="row col-md-8 col-xxl-9">
             <div class="jumbotron col-12">
                 <h1 class="display-4 bigCity" id="bigCityDisplay">Welcome to the Weather Dashboard!</h1>
-                <p class="lead" id="bigTemp" >Temp: 84 F</p>
+                <p class="lead" id="bigTemp" >Temp:</p>
                 <hr class="my-4">
-                <p class="lead" id="bigWind">Wind: 6.67 MPH</p>
+                <p class="lead" id="bigWind">Wind:</p>
                 <hr class="my-4">
-                <p class="lead" id = "bigHumidity">Humidity: 46%</p>
+                <p class="lead" id = "bigHumidity">Humidity:</p>
                 <hr class="my-4">
-                <p class="lead" id = "bigUVI">UV Index: .47</p>
+                <p class="lead" id = "bigUVI">UV Index:</p>
             </div>
             <div class="row col-12 justify-content-around" id="forecastCardsList"></div>
         </section>
