application now successfully retrieves previously stored weather data from local storage when user clicks on a city from search history

--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
                 <button type="button" class="btn btn-info my-2" id="searchButton">Search</button>
                 <p class="card-text">Enter city above to receive current weather information and five-day forecast</p>
             </div>
-            <div class="list-group my-3" id="cityList">
-            </div>
+            <div class="list-group my-3" id="cityList"></div>
         </section>
         <section class="row col-md-8 col-xxl-9">
             <div class="jumbotron col-12">
