application now succcessfully adds list of searched cities on page load up

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <p class="card-text">Enter city above to receive current weather information and five-day forecast</p>
             </div>
             <div class="list-group my-3" id="cityList"></div>
+            <button type="button" class="btn btn-danger my-2" id="clearSearch">Clear Search</button>
         </section>
         <section class="row col-md-8 col-xxl-9">
             <div class="jumbotron col-12">
