Weather data on DOM now successfully shows icons as well

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </section>
         <section class="row col-md-8 col-xxl-9">
             <div class="jumbotron col-12">
-                <h1 class="display-4 bigCity" id="bigCityDisplay">Welcome to the Weather Dashboard!</h1>
+                <h1 class="display-4 bigCity" id="bigCityDisplay">Welcome to the Weather Dashboard! <img src="" id="bigIcon"></h1>
                 <p class="lead" id="bigTemp" >Temp:</p>
                 <hr class="my-4">
                 <p class="lead" id="bigWind">Wind:</p>
